buildscript {
    repositories {
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url 'https://repo.spring.io/release' }
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'home'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    querydsl.extendsFrom compileClasspath

    // 모든 설정에서 기본 로깅 제외
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

repositories {
    mavenCentral()    // Maven Central을 첫 번째로
    maven { url 'https://maven.google.com' }
    maven { url "https://plugins.gradle.org/m2/" }
    gradlePluginPortal()
}

dependencies {
    // Spring Boot Starters
    implementation ('org.springframework.boot:spring-boot-starter-web')
    implementation ('org.springframework.boot:spring-boot-starter-thymeleaf')
    implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation ('org.springframework.boot:spring-boot-starter-validation')
    implementation ('org.springframework.boot:spring-boot-starter-security')
    implementation ('org.springframework.boot:spring-boot-starter-websocket')
    implementation ('org.springframework.boot:spring-boot-starter-data-elasticsearch')
    implementation ('org.springframework.boot:spring-boot-starter-webflux')
    implementation ('org.springframework.boot:spring-boot-starter-mail')
    implementation ('org.springframework.boot:spring-boot-starter-batch')


    // Log4j2
    implementation ('org.springframework.boot:spring-boot-starter-log4j2')

    // Database
    implementation 'com.h2database:h2'
    implementation 'com.mysql:mysql-connector-j'
    implementation 'org.hibernate:hibernate-core:6.1.7.Final'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"

    // Jakarta
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    // Jackson
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.apache.kafka:kafka-clients'

    // Elasticsearch
    implementation 'co.elastic.clients:elasticsearch-java:8.10.4'
    implementation 'jakarta.json:jakarta.json-api:2.1.1'
    implementation 'org.springframework.data:spring-data-elasticsearch:5.2.3'

    // HTTP Components
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
    implementation 'org.apache.httpcomponents:httpcore:4.4.16'

    // Firebase
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage:3.3.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

def querydslSrcDir = 'src/main/generated'
def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main.java.srcDir querydslSrcDir
}

tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.generatedSourceOutputDirectory = file(querydslSrcDir)
}

clean {
    delete file(querydslSrcDir)
}

wrapper {
    gradleVersion = '8.5'
    distributionType = Wrapper.DistributionType.BIN
}

tasks.named('test') {
    useJUnitPlatform()
}